# SSM

./: .gitignore  README.md  main.py  pyproject.toml
.jupyter/: desktop-settings.json
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
conf/: config.yaml
conf/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
conf/data/: AssociateRecall.yaml  InputCopying.yaml  MNIST.yaml
conf/model/: StateSpaceModel.yaml  TransformerModel.yaml
data/: associateRecall.py  inputCopying.py  mnist.py  tokenizer.py
model/: ssm.py  stateSpaceModel.py  transformerModel.py
module/: Module_1.pth  Module_16.pth  Module_32.pth  Module_64.pth  StateSpaceModel_16.pth  TransformerModel_16.pth
notebook/: MNIST.ipynb  SSM.ipynb
