[project]
name = "dlbasics2025-colab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "hydra-core>=1.3.2",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.4",
    "jupyterlab-git>=0.51.2",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "numpy>=2.3.1",
    "pandas>=2.2.3",
    "tensorboard>=2.19.0",
    "termcolor>=3.1.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wandb>=0.21.1",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu128/torch",
    "https://download.pytorch.org/whl/cu128/torchvision",
    "https://download.pytorch.org/whl/cu128/torchaudio",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
